2014-11-03  Yanis Guenane  <yguenane@gmail.com>  0.5.0

  * Fix ordering issue (@gillesgagniard)
  * Add support for RHEL7 (@gillesgagniard)
  * Add support for parameter mkhomedir (@gillesgagniard)
  * Add support for parameter ldaploadcacert (@rhartkopf)
  * Add support for parameters krb5kdcdns, krb5realmdns, preferdns (@djjudas21)

2014-09-01  Yanis Guenane  <yguenane@gmail.com>  0.4.1

  * Add support for parameter smbworkgroup (@djjudas21)

2014-08-19  Yanis Guenane  <yguenane@gmail.com>  0.4.0

  * Support for SMB and Windbind (@djjudas21)

2014-07-25  Yanis Guenane  <yguenane@gmail.com>  0.3.0

  * Support for NIS (@DarrinC)
  * Use of metadata.json for forge filtering

2014-05-12  Yanis Guenane  <yguenane@gmail.com>  0.2.0

  * Support for Kerberos (@radioactiv)
  * Run only if change is made (@radioactiv)

2013-10-28  Yanis Guenane  <yguenane@gmail.com>  0.1.0

  * Initial Commit